Bug 949946 - Unique SharedWorker key composed by name and spec. r=bent, a=sledru